# personal-diary

./: .flake8  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
_old/: .env.template  Dockerfile  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  settings.toml
_old/app/: urls.py  views.py
_old/app/api/: views.py
_old/app/config/: uwsgi.ini  wsgi.py
_old/app/migrations/: 0001_initial.py  0002_todocategory_todos_category.py  0003_alter_todocategory_options_todocategory_create_time_and_more.py  0005_diaryentry.py  0006_rename_todos_todo.py
_old/app/static/: style.css
_old/app/templates/: create_todo_category.html
_old/app/templates/components/diary/: diary_entry.html
_old/app/templates/components/todo_card/: todo_card.html
_old/app/templates/components/todos/: card_todo_card_blank_create.html
api/: Dockerfile  README.md  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 2025-06-05T0856-acb44d072c94_.py  2026-01-07T1306-b655de7ecc6b_initial_tables.py
api/diary_api/: db.py  db_models.py  main.py
api/diary_api/tests/: factories.py  test_db.py  test_routes.py
api/tests/: conftest.py  factories.py  setup.py  test_db.py
backend/: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.prod  entrypoint.prod.sh  entrypoint.sh  mydatabase  pyproject.toml
backend/app/: admin.py  api_views.py  forms.py  htmx_views.py  models.py  urls.py  views.py
backend/app/api/: views.py
backend/app/config/: dev.py  settings.py  uwsgi.ini
backend/app/htmx/: urls.py  views.py
backend/app/migrations/: 0001_initial.py  0002_todocategory_todos_category.py  0003_alter_todocategory_options_todocategory_create_time_and_more.py  0004_alter_todos_category.py  0005_diaryentry.py  0006_rename_todos_todo.py  0007_alter_todo_text.py  0008_alter_todo_category.py
backend/app/static/: style.css
backend/app/templates/: base.html  create_diary_entry.html  create_todo.html  create_todo_category.html  home.html  html_outline.html
backend/app/templates/components/diary/: diary_entry.html  diary_form.html
backend/app/templates/components/todo_card/: todo_card_list.html
backend/app/templates/components/todos/: card_todo.html  card_todo_create.html  card_todo_header.html  completed_today_counter.html
backend/app/templates/registration/: login.html
backend/config/: asgi.py  settings.py  uwsgi.ini  wsgi.py
backend/scripts/: wait-for-it.py
backend/tests/: test_views.py
front-end/: Dockerfile  package-lock.json
front-end/src/: App.tsx  index.css
front-end/src/utils/: http.tsx  interfaces.tsx
nginx/: Dockerfile  nginx.conf
