[tool.poetry]
name = "diary-api"
version = "0.1.0"
description = ""
authors = ["James Ross <james.i.ross5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.2"}
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
