[tool.poetry]
name = "django-template"
version = "1.0.0"
description = ""
authors = ["James Ross <james.i.ross5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0.4"
uwsgi = "^2.0.19"
python-dotenv = "^0.20.0"
django-bootstrap5 = "^21.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
